# blueberry-serde

./: Cargo.toml
.github/workflows/: ci.yml
examples/: basic.rs  minimal.rs
src/: de.rs  error.rs  header.rs  lib.rs  optional_field.rs  packet.rs  ser.rs
tests/: alignment.rs  booleans.rs  forward_compat.rs  messages.rs  optional_fields.rs  packets.rs  primitives.rs  roundtrip.rs  sequences.rs  strings.rs  structs.rs
