[package]
name = "blueberry-serde"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "A serde-compatible serialization/deserialization library for the Blueberry binary wire format"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
